--- a/src/DevAndrey.App/DevAndrey.App.csproj
+++ b/src/DevAndrey.App/DevAndrey.App.csproj
@@ -20,4 +20,8 @@
     <ProjectReference Include="..\DevAndrey.Data\DevAndrey.Data.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="wwwroot\imagens\" />
+  </ItemGroup>
+
 </Project>
